--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,8 @@
-numpy==1.23.5
-pytorch==2.0.1+cu118
+# numpy==1.23.5
+# torch==2.0.1+cu118
 qutip==4.7.3
-matplotlib==3.7.1
+matplotlib
+# ==3.7.1
 scipy==1.11.2
+scikit-learn
+pandas
